Fixed description text from overflowing

--- a/src/styles/tutCard.css
+++ b/src/styles/tutCard.css
@@ -15,6 +15,7 @@ code {
   justify-content: flex-start;
   align-items: flex-start;
   padding: 0.8rem;
+  overflow: hidden;
   transition: all 0.3s ease-in-out;
 }
 
@@ -47,6 +48,10 @@ code {
   font-weight: 400;
   margin: 0.5rem 0;
   color: #9ca3af;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .tutCard .tutCardText p a {
